--- a/sharecanvas-nodejs/public/css/style.css
+++ b/sharecanvas-nodejs/public/css/style.css
@@ -31,6 +31,20 @@ hr {
 	/*width:100%;*/
 	/*height:100%;*/
 }
+html, body {
+  height: 100%;
+}
+
 body {
-    overflow: hidden;
+  margin: 0;
+  display: flex;
+
+  /* This centers our sketch horizontally. */
+  justify-content: center;
+
+  /* This centers our sketch vertically. */
+  align-items: center;
+}
+canvas#defaultCanvas0{
+	background-color:#000;
 }
